--- a/source/index.html
+++ b/source/index.html
@@ -6,20 +6,6 @@
         <title>Web Components Boilerplate</title>
     </head>
     <body>
-        <entry-point>
-            <cool-header></cool-header>
-
-            <location-route path="/" exact>
-                <home-view>
-            </location-route>
-
-            <location-route path="/page-1" exact>
-                <page-1-view>
-            </location-route>
-
-            <location-route path="/page-2" exact>
-                <page-2-view>
-            </location-route>
-        </entry-point>
+        <entry-point> </entry-point>
     </body>
 </html>
